@@ -24,7 +24,7 @@
  */
 
 static const char usage_head[] =
-"[-?@(#)$Id: cp (ksh 93u+m) 2022-08-30 $\n]"
+"[-?\n@(#)$Id: cp (ksh 93u+m) 2022-08-30 $\n]"
 "[--catalog?" ERROR_CATALOG "]"
 ;
 
